<resources>
    <string name="app_name">Constraint-Task</string>
    <string name="tv_text1">Text1</string>
    <string name="tv_text2">Text2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_username">Username</string>
    <string name="tv_message">Message</string>
    <string name="testing_text">Hello I Am Adnan I Am Testing  </string>
    <string name="et_text_message">Enter Message</string>
    <string name="btn_text">Send</string>
    <string name="tv_time">Time</string>
    <string name="btn_txt_demo1">Demo 1</string>
    <string name="btn_txt_demo2">Demo 2</string>
    <string name="btn_txt_demo3">Demo 3</string>
    <string name="btn_txt_demo4">Demo 4</string>
    <string name="btn_txt_demo5">Demo 5</string>
    <string name="btn_txt_demo6">Demo 6</string>
    <string name="recyclerview_demo_toolbar_text"><font color="#FFFFFF">Recyclerview Demo</font></string>
    <string name="total_2000">Total = 2000</string>
    <string name="tv_text_demo2">Width</string>
    <string name="enter_number">Enter Number</string>
    <string name="toolbar_text_demo2"><center>RecyclerView Demo</center></string>
    <string name="enter_message">Enter Message</string>
    <string name="tab_text_login"><font size="12">Login</font></string>
    <string name="tab_text_register"><font size="12">Register</font></string>
    <string name="tab_text_search"><font size="12">Search</font></string>
    <string name="demo3_tittle_toolbar">Tab-Layout</string>
    <string name="text_tv_welcome">Welcome Back!</string>
    <string name="tv_text_login_description">Please sign in to continue app</string>
    <string name="tv_text_signup_description">Required information for account creation</string>
    <string name="et_hint_email_login">Email address</string>
    <string name="et_hint_password_login">Password</string>
    <string name="tv_text_forgot_login">Forgot Password?</string>
    <string name="btn_text_login">Sign in Account</string>
    <string name="btn_text_logout">Logout</string>
    <string name="text_tv_signup">Sign Up</string>
    <string name="et_hint_username_signup">User Name</string>
    <string name="et_hint_mobile_number_signup">Mobile Number</string>
    <string name="et_hint_address_signup">Address</string>
    <string name="et_hint_pin_code_signup">Pincode</string>
    <string name="btn_text_signup">Submit</string>
    <string name="hint_resource">Enter City</string>
    <string name="et_hint_confirm_password_login">Confirm Password</string>
    <string name="tv_text_after_login">User Login Successfully</string>
    <string name="tv_text_valid_email">Please Enter Valid Email Address</string>
    <string name="tv_text_valid_password">Minimum length of password is six characters></string>
    <string name="btn_txt_bottom_sheet">Update</string>
    <string name="tv_txt_bottomSheet">Edit User And Update It</string>
    <string name="tv_text_alert_delete_up">Are You Sure?</string>
    <string name="tv_text_alert_delete_down">You want to delete this user !</string>
    <string name="btn_text_alert_positive">Yes</string>
    <string name="btn_text_alert_negative">Cancel</string>
    <string name="tv_no_data_present_search_demo">No Data Present</string>
    <string name="hint_text_et_search_user">Enter User</string>
    <string name="tittle_text_search_toolbar">Search</string>
    <string name="demo4_tb_tittle_text">Retrofit API</string>
    <string name="tv_txt_address">Address</string>
    <string name="tv_geo_txt">Geo</string>
    <string name="tv_company_txt">Company</string>
    <string name="dialog_text_yes"><font color="#4A38D2">!No Thanks</font></string>
    <string name="dialog_text_no"><font color="#4A38D2">Go To Setting</font></string>
    <string name="dialog_message">Internet Connection Required To Load Data</string>
    <string name="tv_progress_text_loading"><font color="#4A38D2">Loading....</font></string>
    <string name="google_map_key">AIzaSyAn7mEeKHM8UIfBPwtEJcXAQpvpNEBQExw</string>
    <string name="text_time">Time</string>
    <string name="text_firebase_demo">Firebase Demo</string>
    <string name="tv_text_fire_store">Firestore</string>
    <string name="tv_text_week">WEEK</string>
    <string name="tv_text_month_filter">MONTH</string>
    <string name="tv_text_year_filter">YEAR</string>
    <string name="tv_text_day_filter">DAY</string>
    <string name="et_start_date_hint">Start Date</string>
    <string name="et_end_date_hint">End Date</string>
    <string name="tittle_et_hint_demo6">Enter Tittle</string>
    <string name="add_data_btn_text_demo6">Add Data</string>
</resources>