<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_demo1"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/btn_background_first_screen"
        android:foreground="@drawable/send_img_ripple"
        android:text="@string/btn_txt_demo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_demo2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/btn_background_first_screen"
        android:foreground="@drawable/send_img_ripple"
        android:text="@string/btn_txt_demo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_demo1"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_demo3"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/btn_background_first_screen"
        android:foreground="@drawable/send_img_ripple"
        android:text="@string/btn_txt_demo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_demo2"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_demo4"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/btn_background_first_screen"
        android:foreground="@drawable/send_img_ripple"
        android:text="@string/btn_txt_demo4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_demo3"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_demo5"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:background="@drawable/btn_background_first_screen"
        android:foreground="@drawable/send_img_ripple"
        android:text="@string/btn_txt_demo5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_demo4"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>