<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentLoginDemo3">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_signup_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/text_tv_signup"
                android:textColor="@color/DarkViolet"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_description_signup"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/tv_text_login_description"
                android:textColor="@color/DarkViolet"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup_text" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_username_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/demo3_et_shape"
                android:drawableEnd="@drawable/et_icon_username_signup"
                android:drawablePadding="10dp"
                android:hint="@string/et_hint_username_signup"
                android:inputType="text"
                android:padding="18dp"
                android:textColorHint="#757575"
                app:layout_constraintEnd_toEndOf="@+id/tv_description_signup"
                app:layout_constraintStart_toStartOf="@+id/tv_description_signup"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_signup"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_number_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/demo3_et_shape"
                android:drawableEnd="@drawable/et_icon_mobile_signup"
                android:drawablePadding="10dp"
                android:hint="@string/et_hint_mobile_number_signup"
                android:inputType="number"
                android:padding="18dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/et_username_signup"
                app:layout_constraintStart_toStartOf="@+id/et_username_signup"
                app:layout_constraintTop_toBottomOf="@+id/et_username_signup"
                tools:ignore="TextContrastCheck" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/demo3_et_shape"
                android:drawableEnd="@drawable/et_icon_mail_login"
                android:drawablePadding="10dp"
                android:hint="@string/et_hint_email_login"
                android:inputType="textEmailAddress"
                android:padding="18dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_number_signup"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/demo3_et_shape"
                android:drawableEnd="@drawable/et_icon_password_login"
                android:drawablePadding="10dp"
                android:hint="@string/et_hint_password_login"
                android:inputType="textPassword"
                android:padding="18dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email_signup"
                tools:ignore="TextContrastCheck" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_confirm_password_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/demo3_et_shape"
                android:drawableEnd="@drawable/et_icon_password_login"
                android:drawablePadding="10dp"
                android:hint="@string/et_hint_confirm_password_login"
                android:inputType="textPassword"
                android:padding="18dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password_signup"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_address_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/demo3_et_shape"
                android:drawableEnd="@drawable/et_icon_address_signup"
                android:drawablePadding="10dp"
                android:hint="@string/et_hint_address_signup"
                android:inputType="text"
                android:padding="18dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_confirm_password_signup"
                tools:ignore="TextContrastCheck" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_pin_code_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/demo3_et_shape"
                android:drawableEnd="@drawable/et_icon_pincode_signup"
                android:drawablePadding="10dp"
                android:hint="@string/et_hint_pin_code_signup"
                android:inputType="number"
                android:padding="18dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_address_signup"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/city_drop_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/gradient_spinner"
                android:drawablePadding="10dp"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_pin_code_signup"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/demo3_btn_border"
                android:text="@string/btn_text_signup"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_drop_down" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>