<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/recyclerview_background"
    tools:context=".fragments.DataShowFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_dataShow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_back_dataShow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tittle_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/recyclerview_background"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView_dataShow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/recyclerview_background"
        app:layout_constraintBottom_toTopOf="@+id/et_send_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_dataShow"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/recyclerview_data_show" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_send_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_border"
        android:hint="@string/et_text_message"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/toolbar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_send_message"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_send_message"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_border"
        android:text="@string/btn_text"
        android:textColor="@color/toolbar_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/view_layout_dataShow_down"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="@color/toolbar_color"
        app:layout_constraintBottom_toBottomOf="@id/btn_send_message"
        app:layout_constraintEnd_toEndOf="@+id/et_send_message"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>